# haskell-learning

datatypesfunctions/: CHANGELOG.md  DataTypesFunctions.cabal  hie.yml
datatypesfunctions/src/: DatatypesFunctions.hs  MyLib.hs
